--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <head></head>
     <body>
         <h2>Hello Coursera</h2>
+        <h3>JavaScript is the language of the web</h3>
     </body>
 </html>
